[gd_scene load_steps=4 format=3 uid="uid://dd210la60pu46"]

[ext_resource type="Theme" uid="uid://bm3yci578ubi8" path="res://ui/theme_default.tres" id="1_m4l0o"]
[ext_resource type="PackedScene" uid="uid://o26ja7l0t73i" path="res://ui/controls_menu/action_input_ui.tscn" id="2_kdate"]
[ext_resource type="Script" uid="uid://b3la3hj3r0bu6" path="res://ui/controls_menu/ControlsMenu.gd" id="2_lt1d2"]

[node name="ControlsMenu" type="PanelContainer"]
offset_right = 177.0
offset_bottom = 133.0
theme = ExtResource("1_m4l0o")
script = ExtResource("2_lt1d2")
metadata/_tab_index = 1

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ControlsVBox" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Heading" type="Label" parent="VBox/ControlsVBox"]
layout_mode = 2
text = "CONTROLS"

[node name="HSeparator" type="HSeparator" parent="VBox/ControlsVBox"]
layout_mode = 2

[node name="ActionGrid" type="GridContainer" parent="VBox/ControlsVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 8
columns = 2

[node name="ActionInputUI" parent="VBox/ControlsVBox/ActionGrid" instance=ExtResource("2_kdate")]
layout_mode = 2
action = "Pause"

[node name="ButtonsVBox" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="RevertToDefaultsButton" type="Button" parent="VBox/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
text = "REVERT TO DEFAULTS"

[node name="BackToOptionsButton" type="Button" parent="VBox/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
text = "BACK TO OPTIONS"

[node name="CloseButton" type="Button" parent="VBox/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
text = "CLOSE"
